ChangeLog of simuPOP

BUGS:
  - when useDefault is set, wrong parameter is ignored silently
  - better handling of True/False in simuOpt
  - all known bugs have been cleared.

version 0.8.1 - Not released, available at https://simupop.svn.sourceforge.net/svnroot/simupop/trunk
  - NEW: Allow len(pops) == 1 in MergePopulationsByLoci(pops) and
	MergePopulations(pops)
  - BUG: Use /dev/urandom for unix users. os.path.isfile('/dev/urandom') 
	returns false even if this file does exist.

version 0.8.0 - (Rev 1215) Aug 14, 2007
  - Reference manual overhaul
  - Rename outputHelper to pyOutput, and alleleType to AlleleType for consistency.
  - NEW: Respect environmental variable GSL_RNG_TYPE for the choice of RNG

version 0.7.11 - (Rev 1133) July 26, 2007
  - NEW: add subPop(s) parameters to selectors, allowing different selection pressure 
		in different subpopulations
  - NEW: add subPops parameter to intializers, working the same as subPop
  - NEW: extending pyIndOperator with handling of loci and infoFields
  - BUG: fix a crash of postOps in dryrun mode by applying operator in the order given.
  - BUG: fix scripts/simuViewPop.py
  - NEW: add optional option destructive=False to simulator::getPopulation, as
		a way to retrieve a population more efficiently.
  - NEW: rewrite pyMigrator to allow for changing migration rates, and more subtle
		control of migration using individual genotype.
  - NEW: rename parameter atLoci to loci for all mutators (atLoci becomes obsolete, but is
		still usable)
  - BUG: fix a mutator crash when locus index difference exceeds the range of integer,
		for cases, for example, with 10k loci and 100k individuals.
  - NEW: add src/hapMapUtil.py to add some utility functions to handle HapMap data
  - NEW: add parameter byChromosome to population::mergePopulationByLoci and
		MergePopulationsByLoci to allow chromosome to chromosome merge.


version 0.7.10 - (Rev 987) May 20, 2007
  - BUG: fix a memory leak bug with LoadPopulation