@@ -1,8 +1,6 @@
 ChangeLog of simuPOP
 
 BUGS:
-  - when useDefault is set, wrong parameter is ignored silently
-  - better handling of True/False in simuOpt
   - all known bugs have been cleared.
 
 version 0.8.1 - Not released, available at https://simupop.svn.sourceforge.net/svnroot/simupop/trunk
@@ -10,6 +8,9 @@ version 0.8.1 - Not released, available at https://simupop.svn.sourceforge.net/s
 	MergePopulations(pops)
   - BUG: Use /dev/urandom for unix users. os.path.isfile('/dev/urandom') 
 	returns false even if this file does exist.
+  - BUG: Fix the handling of binary option in command line, and handling of short 
+		arguments.
+  - NEW: Use a checkbox for binary options in the parameter dialogs.
 
 version 0.8.0 - (Rev 1215) Aug 14, 2007
   - Reference manual overhaul
